--- a/style.css
+++ b/style.css
@@ -8,13 +8,15 @@ body {
 nav {
 	position: fixed;
 	top: 0;
-	display: block;
+	display: flex;
 	background-color: #000;
 	color: #e0e2eb;
 	width: 100%;
+	height: 10vh;
 	text-transform: uppercase;
 	padding: 10px;
 	border-bottom: #e0e2eb solid 2px;
+	align-items: center;
 }
 ul {
 	width: 90%;
@@ -75,19 +77,18 @@ footer {
 	background-color: black;
 	width: 100%;
 	height: 20vh;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-direction: row;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	flex-direction: row;
 }
 .copyright {
-	
 	color: #e0e2eb;
-    font-size: 16px;
+	font-size: 16px;
 }
 footer i {
-    color: #e0e2eb;
-    font-size: 40px;
-    padding: 5px;
+	color: #e0e2eb;
+	font-size: 40px;
+	padding: 5px;
 }
 /* END HOME */
