--- a/style.css
+++ b/style.css
@@ -5,19 +5,7 @@ body {
 }
 
 /* BEGIN NAV */
-nav {
-	position: fixed;
-	top: 0;
-	display: flex;
-	background-color: #000;
-	color: #e0e2eb;
-	width: 100%;
-	height: 5vh;
-	text-transform: uppercase;
-	padding: 10px;
-	border-bottom: #e0e2eb solid 2px;
-	align-items: center;
-}
+/* 
 ul {
 	width: 90%;
 	display: flex;
@@ -32,7 +20,188 @@ nav a {
 	text-decoration: none;
 	color: #e0e2eb;
 	font-size: 16px;
+} 
+nav {
+	position: fixed;
+	top: 0;
+	display: flex;
+	background-color: #000;
+	color: #e0e2eb;
+	width: 100%;
+	height: 5vh;
+	text-transform: uppercase;
+	padding: 10px;
+	border-bottom: #e0e2eb solid 2px;
+	align-items: center;
+	z-index: 5;
+}*/
+/* NAVBAR */
+
+.brand {
+	position: absolute;
+	padding-left: 20px;
+	float: left;
+	line-height: 55px;
+	font-size: 1.4em;
 }
+.brand a,
+.brand a:visited {
+	color: #fff;
+	text-decoration: none;
+}
+.nav-container {
+
+	margin: 0 auto;
+	position: fixed;
+	top: 0;
+	display: flex;
+	background-color: #000;
+	color: #e0e2eb;
+	width: 100%;
+	height: 5vh;
+	text-transform: uppercase;
+	padding:  10px;
+	border-bottom: #e0e2eb solid 2px;
+	align-items: center;
+	z-index: 5;
+	justify-content: space-around;
+}
+nav {
+	float: right;
+}
+nav ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+nav ul li {
+	float: left;
+	position: relative;
+}
+nav ul li a,
+nav ul li a:visited {
+	display: block;
+	padding: 0 20px;
+	line-height: 55px;
+	color: #fff;
+	background: #000;
+	text-decoration: none;
+}
+nav ul li a {
+	background: transparent;
+	color: #fff;
+}
+nav ul li a:hover,
+nav ul li a:visited:hover {
+	background: #000;
+	color: #fff;
+}
+.navbar-dropdown li a {
+	background: #000;
+}
+nav ul li a:not(:only-child):after,
+nav ul li a:visited:not(:only-child):after {
+	padding-left: 4px;
+	content: " \025BE";
+}
+nav ul li ul li {
+	min-width: 190px;
+}
+nav ul li ul li a {
+	padding: 15px;
+	line-height: 20px;
+}
+.navbar-dropdown {
+	position: absolute;
+	display: none;
+	z-index: 1;
+	background: #fff;
+	box-shadow: 0 0 35px 0 rgba(0, 0, 0, 0.25);
+}
+/* Mobile navigation */
+.nav-mobile {
+	display: none;
+	position: absolute;
+	top: 0;
+	right: 5px;
+	background: transparent;
+	height: 55px;
+	width: 70px;
+}
+@media only screen and (max-width: 800px) {
+	.nav-mobile {
+		display: block;
+	}
+	nav {
+		width: 100%;
+		padding: 275px 0 15px;
+	}
+	nav ul {
+		display: none;
+	}
+	nav ul li {
+		float: none;
+	}
+	nav ul li a {
+		padding: 15px;
+		line-height: 20px;
+		background: #000;
+	}
+	nav ul li ul li a {
+		padding-left: 30px;
+	}
+	.navbar-dropdown {
+		position: static;
+	}
+	@media screen and (min-width: 800px) {
+		.nav-list {
+			display: block !important;
+		}
+	}
+	#navbar-toggle {
+		position: absolute;
+		left: 18px;
+		top: 15px;
+		cursor: pointer;
+		padding: 10px 35px 16px 0px;
+	}
+	#navbar-toggle span,
+	#navbar-toggle span:before,
+	#navbar-toggle span:after {
+		cursor: pointer;
+		border-radius: 1px;
+		height: 3px;
+		width: 30px;
+		background: #fff;
+		position: absolute;
+		display: block;
+		content: "";
+		transition: all 300ms ease-in-out;
+	}
+	#navbar-toggle span:before {
+		top: -10px;
+	}
+	#navbar-toggle span:after {
+		bottom: -10px;
+	}
+	#navbar-toggle.active span {
+		background-color: transparent;
+	}
+	#navbar-toggle.active span:before,
+	#navbar-toggle.active span:after {
+		top: 0;
+	}
+	#navbar-toggle.active span:before {
+		transform: rotate(45deg);
+	}
+	#navbar-toggle.active span:after {
+		transform: rotate(-45deg);
+	}
+	.nav-container {
+		padding: 10px 0;
+	}
+}
+
 /* END NAV */
 
 /* BEGIN HOME */
@@ -94,10 +263,75 @@ nav a {
 #about {
 	background: #e0e2eb;
 	height: 100vh;
+	width: 100%;
+	display: flex;
+	padding-top: 80px;
+	font-size: 20px;
 }
 #about p {
-	padding-top: 50px;
-	margin: 0 auto;
+	
+	margin: 30px auto;
+}
+.aboutleft {
+	width: 50%;
+	padding: 0 125px;
+	text-align: center;
+	
+	
+}
+.aboutleft img {
+	width: 250px;
+	border-radius: 250px;
+	margin-top: 80px;
+	
+}
+.aboutright {
+	justify-content: center;
+	width: 50%;
+	padding: 0 125px;
+	margin: 30px auto;
+	text-align: justify;
+}
+.aboutright span {
+	font-weight: bold;
+}
+.button {
+	display: block;
+	width: 150px;
+	height: 50px;
+	margin: 75px auto 0 auto;
+	color: #000;
+	background-color: #e0e2eb;
+	border: solid 2px #000;
+	border-radius: 10px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-decoration: none;
+}
+@media only screen and (max-width: 1000px) {
+	.aboutright {
+		width: 90%;
+		margin: 0 25px;
+		padding: 0;
+		
+	}
+	.aboutleft {
+		width: 90%;
+		margin: 0 25px;
+		padding: 0;
+	}
+	#about {
+		
+		height: 150vh;
+		flex-direction: column;
+		
+	}
+	.aboutleft img {
+
+		margin-top: 20px;
+		
+	}
 }
 /* END ABOUT */
 
@@ -105,14 +339,108 @@ nav a {
 #projects {
 	background: black;
 	height: 100vh;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	flex-wrap: wrap;
+}
+
+#projects img {
+	width: 450px;
+	filter: grayscale(80%);
+}
+#projects img:hover {
+	filter: grayscale(0);
+}
+#projects p {
+	color: white;
+	max-width: 400px;
+	margin: 25px;
+	text-align: justify;
+}
+.center {
+	text-align: center !important;
 }
 /* END PROJECTS */
 
 /* BEGIN CONTACT */
 #contact {
-	background: white;
+	background: #e0e2eb;
 	height: 90vh;
+	padding-top: 80px;
 }
+input[type="text"] {
+	color: #000;
+	background-color: #e0e2eb;
+	font-weight: bold;
+	border: #000 solid 2px;
+	border-radius: 10px;
+}
+input[type="tel"] {
+	color: #000;
+	background-color: #e0e2eb;
+	font-weight: bold;
+	border: #000 solid 2px;
+	border-radius: 10px;
+}
+input[type="email"] {
+	color: #000;
+	background-color: #e0e2eb;
+	font-weight: bold;
+	border: #000 solid 2px;
+	border-radius: 10px;
+}
+textarea {
+	color: #000;
+	background-color: #e0e2eb;
+	font-weight: bold;
+	border: #000 solid 2px;
+	width: 500px;
+	height: 200px;
+	border-radius: 10px;
+}
+::placeholder {
+	color: #aaa;
+	font-weight: normal;
+}
+input[type="submit"] {
+	display: block;
+	width: 300px;
+	height: 50px;
+	margin: 25px auto 0 auto;
+	color: #000;
+	background-color: #e0e2eb;
+	border: solid 2px #000;
+	border-radius: 10px;
+}
+input[type="submit"]:hover {
+	display: block;
+	margin-top: 25px;
+	color: #e0e2eb;
+	background-color: #000;
+	border: solid 2px #000;
+}
+.contactform {
+	padding: 20px;
+	margin: 0 auto;
+	width: 50%;
+	border-radius: 15px;
+	color: #000;
+	background-color: #e0e2eb;
+	border: #000 solid 4px;
+	box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
+}
+.row {
+	display: flex;
+	justify-content: space-around;
+	flex-wrap: wrap;
+}
+
+.form-control {
+	padding: 5px 10px;
+	margin: 20px;
+}
+
 /* END CONTACT */
 
 /* BEGIN FOOTER */
@@ -136,7 +464,7 @@ footer i {
 }
 /* END FOOTER */
 
-@media screen and (max-width: 481px) {
+@media screen and (max-width: 1000px) {
 	#home h1 {
 		padding-top: 200px;
 		text-align: center;
@@ -157,5 +485,36 @@ footer i {
 	.typing {
 		max-width: 350px;
 		animation: typing 2s steps(40, end), blink-caret 0.75s step-end infinite;
+	}
+	#projects {
+		height: 200vh;
+	}
+	#projects img {
+		width: 350px;
+		filter: grayscale(0);
+	}
+
+	#projects p {
+		color: white;
+		max-width: 300px;
+		margin: 25px;
+		text-align: justify;
+	}
+	.form-control {
+		padding: 5px 10px;
+		margin: 10px 5px;
+	}
+	textarea {
+		width: 100%;
+		height: 100px;
+	}
+	.contactform {
+		width: 80%;
+		padding: 10px;
+	}
+}
+@media screen and (max-width: 481px) {
+	#projects {
+		height: 300vh;
 	}
 }
