--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ nav ul li ul li a {
 	height: 100vh;
 }
 .name {
-	padding-top: 200px;
+	padding-top: 150px;
 }
 #home p {
 	color: #dfe1eb;
@@ -197,7 +197,7 @@ nav ul li ul li a {
     overflow: hidden;
     border-right: 0.15em solid #dfe1eb;
     white-space: nowrap;
-    margin: 0 auto;
+    margin: 0 auto 100px auto;
     letter-spacing: 0.15em;
     animation: typing 4s steps(40, end) infinite, blink-caret 0.75s step-end infinite;
 }
@@ -211,6 +211,48 @@ nav ul li ul li a {
     0%, 100% { border-color: transparent; }
     25%, 75% { border-color: #dfe1eb; }
 }
+
+.icon-circle {
+	position: relative;
+	width: 200px;
+	height: 200px;
+	margin: 20px auto;
+	animation: rotate 20s linear infinite;
+}
+
+.icon-circle i {
+
+	animation: counterRotate 20s linear infinite;
+}
+
+.icon-circle span {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform-origin: center;
+	font-size: 24px; /* Taille des icônes */
+}
+
+/* Positionnement manuel de chaque icône */
+.icon-circle span:nth-child(1) { transform: translate(-50%, -50%) rotate(0deg) translate(100px) rotate(0deg); }
+.icon-circle span:nth-child(2) { transform: translate(-50%, -50%) rotate(45deg) translate(100px) rotate(-45deg); }
+.icon-circle span:nth-child(3) { transform: translate(-50%, -50%) rotate(90deg) translate(100px) rotate(-90deg); }
+.icon-circle span:nth-child(4) { transform: translate(-50%, -50%) rotate(135deg) translate(100px) rotate(-135deg); }
+.icon-circle span:nth-child(5) { transform: translate(-50%, -50%) rotate(180deg) translate(100px) rotate(-180deg); }
+.icon-circle span:nth-child(6) { transform: translate(-50%, -50%) rotate(225deg) translate(100px) rotate(-225deg); }
+.icon-circle span:nth-child(7) { transform: translate(-50%, -50%) rotate(270deg) translate(100px) rotate(-270deg); }
+.icon-circle span:nth-child(8) { transform: translate(-50%, -50%) rotate(315deg) translate(100px) rotate(-315deg); }
+
+@keyframes rotate {
+	from { transform: rotate(0deg); }
+	to { transform: rotate(360deg); }
+}
+
+@keyframes counterRotate {
+	from { transform: rotate(0deg); }
+	to { transform: rotate(-360deg); }
+}
+
 
 /* END HOME */
 
